[package]
name = "cybernet"
version = "0.1.0"
authors = ["C H <litvintech@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
pow-faucet = []
pow-registration = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
cosmwasm-schema = "1.2.7"
cosmwasm-std = { version = "1.2.7", features = [
  "abort",
  "iterator",
  "stargate"
  # "cosmwasm_1_3",
  # "cosmwasm_1_4",
] }
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
schemars = "0.8.16"
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.50" }
log = "0.4.20"
cw-utils = { version = "1.0.2" }

primitive-types = { version = "0.12.0", default-features = false }
sp-core-hashing = { version = "13.0.0", default-features = false }
substrate-fixed = { version = "0.5.9", default-features = false }
scale-info = { version = "2.0.0", default-features = false }
cyber-std = { version = "0.2.2"}

[dev-dependencies]
cw-multi-test = { version = "0.18.0", features = ["iterator"]}
cyber-std = { version = "0.2.2"}
cyber-std-test = { version = "0.2.1"}
rand = { version = "0.8.4" }
cw-storage-gas-meter = "1.0.0"
